<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        android:padding="15dp"
        android:textColor="@color/colorBlack"
        />

    <EditText
        android:id="@+id/enter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:padding="15dp"
        android:textColor="@color/colorBlack"
        />

     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
         android:padding="15dp"
         android:textColor="@color/colorBlack"
         />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crime_date"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"
        android:id="@+id/crime_solved"
        android:textColor="@color/colorBlack"

        />
    <Button
        android:id="@+id/choose_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_suspect_text"
        />

    <Button
        android:id="@+id/crime_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_report_text"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_btn"
        android:id="@+id/add"
        android:layout_marginLeft="150dp"
        />



</LinearLayout>